put, patch, delete method implementation for article
