# server/src/api/v1/article/controllers/findSingleItem.js
@@ -1,0 +1,25 @@
+/* eslint-disable no-underscore-dangle */
+const services = require('../../../../lib/articles');
+
+const findSingleItem = async (req, res, next) => {
+    const { id } = req.params;
+    const expand = req.query.expand || '';
+
+    try {
+        const article = await services.findSingleItem({ id, expand });
+        res.status(200).json({
+            code: 200,
+            message: 'Data retrived',
+            data: article,
+            links: {
+                self: `/articles/${article._id}`,
+                author: `/articles/${article._id}/author`,
+                comments: `/articles/${article._id}/comments`,
+            },
+        });
+    } catch (e) {
+        next(e);
+    }
+};
+
+module.exports = findSingleItem;
